--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,29 +1,58 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    font-family: "Open Sans", sans-serif;
+    background-color: black;
+    color: white;
+    text-align: center;
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    max-width: 400px;
-    height: 100vh;
-    margin: 0 auto;
+    height: calc(100vh - 2rem);
+    margin: 1rem;
+}
+
+img {
+    height: 40px;
+    margin: 2rem 0 1rem 0;
 }
 
 button {
-    margin: 1rem;
+    border-width: 0;
+    border-radius: 8px;
     padding: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: rgb(34, 221, 122);
 }
 
-pre {
+button:disabled {
+    padding: 1rem;
+    background-color: azure;
+}
+
+button, audio {
+    width: 100%;
+    margin: 1rem 0;
+    min-height: 50px;
+}
+
+p {
+    font-size: 2rem;
     white-space: pre-wrap;
     word-break: break-word;
+    padding-bottom: 1rem;
 }
 
+@media (min-width: 600px) {
 
-audio {
-    margin: 2rem 0;
+    main {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+    button {
+        width: auto;
+    }
 }
